<resources>
    <string name="app_name">App_SaleSquare_HomeBridge</string>
    <string name="fotos">Fotos</string>
    <string name="publicar_inmueble">Publicar Inmueble</string>
    <string name="confirmar_cambios">Confirmar cambios</string>
    <string name="Boton_de_editar_imagen">Boton de editar imagen</string>
    <string name="boton_de_eliminar">Boton de eliminar</string>
    <string name="imagen_de_la_propiedad">Imagen de la propiedad</string>
    <string name="eliminar_foto">Eliminar Foto</string>
    <string name="boton_de_agregar_imagen">Boton de agregar imagen</string>
    <string name="confirmar_eliminaci_n_de_publicaci_n">Confirmar eliminación de \n publicación</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="title">¡Hola, empecemos a crear tu aviso!</string>
    <string name="subtitle">¿Dónde está ubicado tu inmueble?</string>
    <string name="addressTitle">Ingresa calle y número</string>
    <string name="address">Ingresa una dirección</string>
    <string name="city">Selecciona un departamento</string>
    <string name="cityTitle">Departamento</string>
    <string name="back">Atrás</string>
    <string name="open">Abrir selector</string>
    <string name="province">Selecciona una provincia</string>
    <string name="provinceTitle">Provincia</string>
    <string name="district">Selecciona un distrito</string>
    <string name="districtTitle">Distrito</string>
    <string name="map">Seleccionar ubicación en el mapa</string>
    <string name="mapTitle">Mapa</string>
    <string name="confirm">Confirmar ubicación</string>
    <string name="createPost">Crear una nueva publicación</string>
    <string name="editLocation">Editar ubicación</string>
    <string name="editTitle">Editar ubicación de inmueble</string>
    <string name="bienvenido">¡Bienvenido a Salesquare!</string>
    <string name="ingresar">Ingresar con mi cuenta:</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="crearcuenta">Crear una cuenta</string>
    <string name="aunocuenta">¿Aún no tienes cuenta?</string>
    <string name="creala">Créala en menos de un minuto</string>
    <string name="registrarme">Registrarme con un Email:</string>
    <string name="condicion">Al registrarte, estás aceptando los términos y condiciones</string>
    <string name="tengo">Ya tengo cuenta. Ingresar</string>
</resources>