<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity"
        android:background="#DADADA">


    <EditText
            android:layout_width="283dp"
            android:layout_height="39dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:fontFamily="@font/hind"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="63dp"
            android:layout_marginEnd="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister2" />

    <EditText
            android:layout_width="282dp"
            android:layout_height="43dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:hint="@string/contrasena"
            android:fontFamily="@font/hind"
            android:textSize="12sp"
            android:layout_marginEnd="66dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:layout_constraintHorizontal_bias="0.0"
            android:password="true" />

    <Button
            android:text="@string/crearcuenta"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:id="@+id/btCreate"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="93dp"
            android:layout_marginEnd="94dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="84dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintHorizontal_bias="0.0" />

    <TextView
            android:text="@string/aunocuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCreateTitle"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="132dp"
            android:layout_marginEnd="135dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/hind"
            android:textSize="17sp" />

    <androidx.appcompat.widget.Toolbar
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/creala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSubtitleCreate"
            android:fontFamily="@font/hind"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="114dp"
            android:layout_marginEnd="114dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/registrarme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRegister2"
            android:fontFamily="@font/hind_semibold"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitleCreate"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="123dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/condicion"
            android:layout_width="255dp"
            android:layout_height="50dp"
            android:id="@+id/tvCond"
            android:textAlignment="center"
            android:fontFamily="@font/hind"
            android:textSize="12sp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="78dp"
            android:layout_marginEnd="78dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/tengo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRedLogin"
            android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@+id/btCreate"
            android:layout_marginEnd="126dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="126dp"
            android:fontFamily="@font/hind"
            android:textSize="14sp" />
</androidx.constraintlayout.widget.ConstraintLayout>