<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.CreateLocationActivity"
            android:background="#DADADA">

        <TextView
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle"
                android:fontFamily="@font/hind_semibold"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" />

        <TextView
                android:text="@string/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSubtitle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:fontFamily="@font/hind_semibold"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/tvTitle" />

        <TextView
                android:text="@string/addressTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAddressTitle"
                android:textSize="12sp"
                android:fontFamily="@font/hind_semibold"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
                android:layout_marginTop="32dp" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tvSubtitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:id="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/tvAddressTitle"
                android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:hint="@string/address"
                    android:id="@+id/etAddress"
                    android:background="@drawable/rounded_edit_text"
                    android:textSize="12sp"
                    android:fontFamily="@font/hind_semibold"
                    android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvCity"
                android:background="@drawable/rounded_edit_text"
                android:textSize="12sp"
                android:fontFamily="@font/hind_semibold"
                android:textColor="#8C747474"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="17dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="17dp"
                app:layout_constraintStart_toStartOf="@+id/tvCityTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvCityTitle"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:hint="@string/city"
                android:textColorHint="@color/gray" />

        <TextView
                android:text="@string/cityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCityTitle"
                android:fontFamily="@font/hind_semibold"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toTopOf="@+id/tvCity"
                android:layout_marginBottom="4dp" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/back"
                android:id="@+id/ivOpen"
                android:rotation="270"
                app:layout_constraintEnd_toEndOf="@+id/tvCity"
                app:layout_constraintTop_toTopOf="@+id/tvCity"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/open" />

        <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvProvince"
                android:background="@drawable/rounded_edit_text"
                android:textSize="12sp"
                android:fontFamily="@font/hind_semibold"
                android:textColor="@color/gray"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="17dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="17dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProvinceTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:hint="@string/province"
                android:textColorHint="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/tvProvinceTitle"
                android:layout_marginTop="4dp" />

        <TextView
                android:text="@string/provinceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvProvinceTitle"
                app:layout_constraintBottom_toTopOf="@+id/tvProvince"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@+id/tvCity"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/tvCity"
                android:fontFamily="@font/hind_semibold"
                android:textSize="12sp"
                android:textColor="@color/black" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/back"
                android:id="@+id/ivOpen2"
                android:rotation="270"
                app:layout_constraintEnd_toEndOf="@+id/tvProvince"
                app:layout_constraintTop_toTopOf="@+id/tvProvince"
                android:contentDescription="@string/open"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="16dp" />

        <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvDistrict"
                android:background="@drawable/rounded_edit_text"
                android:textSize="12sp"
                android:fontFamily="@font/hind_semibold"
                android:textColor="@color/gray"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="17dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="17dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDistricTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:hint="@string/district"
                android:textColorHint="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/tvDistricTitle"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="4dp" />

        <TextView
                android:text="@string/districtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDistricTitle"
                android:fontFamily="@font/hind_semibold"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvProvince"
                app:layout_constraintStart_toStartOf="@+id/tvProvince"
                app:layout_constraintBottom_toTopOf="@+id/tvDistrict"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="24dp" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/back"
                android:id="@+id/ivOpen3"
                android:rotation="270"
                app:layout_constraintEnd_toEndOf="@+id/tvDistrict"
                app:layout_constraintTop_toTopOf="@+id/tvDistrict"
                android:contentDescription="@string/open"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="16dp" />

        <TextView
                android:text="@string/mapTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvMap"
                app:layout_constraintTop_toBottomOf="@+id/tvDistrict"
                app:layout_constraintStart_toStartOf="@+id/tvDistrict"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/hind_semibold"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/mvMap"
                android:layout_marginBottom="4dp" />

        <com.google.android.gms.maps.MapView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:id="@+id/mvMap"
                app:layout_constraintTop_toBottomOf="@+id/tvMap"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/map"
                app:layout_constraintHorizontal_bias="0.0" />

        <Button
                android:text="@string/confirm"
                android:layout_width="221dp"
                android:layout_height="56dp"
                android:id="@+id/btConfirm"
                android:backgroundTint="@color/dark_green"
                app:layout_constraintStart_toStartOf="@+id/tvMap"
                app:layout_constraintTop_toBottomOf="@+id/mvMap"
                android:layout_marginTop="32dp"
                android:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>